# labgen

./: .devcontainer.json  .gitignore  Makefile.tpl  README.md  common.typ  config.toml  num.typ  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.dockerfile.json  devcontainer.json  setup.sh
L1/: 00-intro.typ  01-pi-err.typ  02-sin-err.typ  03-measure.typ  04-final.typ  Makefile  calc.py  input.toml  main.typ  values.typ
docs/: polars.md
