[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labgen"
version = "0.1.0"
description = "Lab report generation tools"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "toml>=0.10.2",
]
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["labgen"]